# bitcoin-prover

./: .gitignore  Nargo.toml  README.md  requirements.txt  tx
app/blocks/: Nargo.toml  Prover.toml
app/p2ms/: Prover.toml
app/p2pk/: Prover.toml  Prover.toml.template
app/p2pkh/: Prover.toml  Prover.toml.template
app/p2sh/: Nargo.toml  Prover.toml  Prover.toml.template
app/p2sh-p2wpkh/: Prover.toml  Prover.toml.template
app/p2sh-p2wsh/: Nargo.toml  Prover.toml  Prover.toml.template
app/p2sh_p2wpkh/: Prover.toml
app/p2tr/: Nargo.toml  Prover.toml  Prover.toml.template
app/p2tr-script/: Nargo.toml  Prover.toml  Prover.toml.template
app/p2tr_script/: Prover.toml.template
app/p2wpkh/: Nargo.toml  Prover.toml  Prover.toml.template
blocks/: Nargo.toml  Prover.toml
bvm/: Nargo.toml  Prover.toml
circuits/: .gitignore  Nargo.toml  README.md
explorer-util/: conv.py  cur.json  gen.py  prev.json
generator/: Prover.toml  block.py  config.json  main.py  requirements.txt
generator_blocks/: config.json  main.py
generator_p2sh/: config.json  main.py
generator_p2tr/: config.json  main.py
p2sh/: Nargo.toml  Prover.toml
p2tr/: Nargo.toml  Prover.toml
scripts/: blocks.sh  p2ms.sh  p2pk.sh  p2pkh.sh  p2sh-p2wpkh.sh  p2sh-p2wsh.sh  p2sh.sh  p2tr-script.sh  p2tr.sh  p2wpkh.sh  p2wsh.sh  run_service.sh
service/: build_btc_tree.py  main.py  merkle_tree.py
utxo_indexer/: .gitignore  Cargo.toml
utxo_indexer/proof_of_reserve/: Cargo.toml  own_example.json
utxo_indexer/proof_of_reserve/src/: cli.rs  generate_tomls.rs  main.rs  proofs.rs
(+283 files in other folders)
