[package]
name = "proof_of_reserve"
version = "0.1.0"
edition = "2024"

[dependencies]
utxo_test_data_generator = { path = "../utxo_test_data_generator" }
anyhow = "1.0.99"
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
hex = "0.4"
sha2 = "0.10.9"
k256 = { version = "0.11", features = ["ecdsa"] }
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"