[package]
name = "proof_of_reserve"
version = "0.1.0"
edition = "2024"

[dependencies]
utxo_test_data_generator = { path = "../utxo_test_data_generator" }
indexer = { path = "../indexer" }
anyhow = "1.0.99"
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
hex = "0.4"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
bitcoin = "0.32.7"
clap = { version = "4.5.51", features = ["derive"] }